# shitzu-hot-miner

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh  init-args.json  package.json  rust-toolchain.toml
api/: package.json  wrangler.toml
api/src/: accounts.ts  global.d.ts  index.ts
app/: .eslintrc.cjs  package.json
app/src/: app.scss
app/src/lib/: util.ts
app/src/lib/assets/: Logo.svelte  index.ts
app/src/lib/auth/: WalletSelector.svelte  index.ts
app/src/lib/components/: AccessKey.svelte  MessageBox.svelte  ProgressSpinner.svelte  ShitzuAccount.svelte  ShitzuDeposit.svelte  TxSnackbar.svelte  Wallet.svelte  index.ts
app/src/lib/layout/: Body.svelte  Header.svelte  Section.svelte
app/src/lib/models/: index.ts  near.ts
app/src/lib/near/: index.ts
app/src/routes/: +layout.svelte  +page.svelte
crates/contract/: Cargo.toml
crates/contract-lib/: Cargo.toml
crates/contract-lib/src/: error.rs  ft_receiver.rs  lib.rs  storage.rs
crates/test/: Cargo.toml
crates/test-token/: Cargo.toml
crates/test-token/src/: lib.rs
crates/test/tests/: mod.rs
crates/test/tests/util/: call.rs  event.rs  mod.rs  view.rs
res/: contract.wasm  test_token.wasm
