[package]
name = "contract-test"
version = "0.0.1"
authors = ["Mario Reder <mario.reder@pm.me>"]
edition = "2021"

[dev-dependencies]
contract-lib = { path = "../contract-lib" }
anyhow.workspace = true
near-contract-standards.workspace = true
near-sdk.workspace = true
near-workspaces.workspace = true
owo-colors.workspace = true
tokio.workspace = true
